--- a/playbook.yml
+++ b/playbook.yml
@@ -4,48 +4,5 @@
   become: true
   connection: ssh
 
-  vars:
-    packages:
-      - apache2
-      - default-mysql-server
-      - bash-completion
-      - curl
-
-  tasks:
-  - name: Install packages
-    apt:
-      pkg: "{{ packages }}"
-      state: present
-
-  - name: Apache installation
-    apt:
-      name: apache2
-      state: present
-
-  - name: Apache module installation
-    apt:
-      name:
-        - apache2-bin
-        - apache2-data
-        - apache2-utils
-        - libfcgi-perl
-      state: present
-
-  - name: PHP installation
-    apt:
-      name:
-        - php
-        - php-cli
-        - php-mysql
-        - libapache2-mod-php
-      state: present
-
-  - name: phpinfo() to check page
-    template:
-      src: ./info.php.j2
-      dest: /var/www/html/info.php
-
-  - name: restart Apache
-    service:
-      name: apache2
-      state: restarted
+  roles:
+    - apache_setup
